--- a/src/app/componentes/dashboard/dashboard.component.html
+++ b/src/app/componentes/dashboard/dashboard.component.html
@@ -146,6 +146,8 @@
 <button class="btn btn-secondary logout-button" (click)="logout()">Logout</button>
 
 <div class="dashboard-container">
+  <!--div-- class="floating-button"> <button class="btn btn-info"> {{ remainingTime }} </button> </!--div-->
+  <div class="floating-timer"> <div class="timer-info"> {{ remainingTime }} </div> </div>
   <div class="card dashboard-card">
     <button class="btn btn-info btn-block dashboard-btn-white" (click)="mostrarCodigo2()"  id="mano-de-obra-button2" >
       Ver Lista de Presupuesto de Vivienda
