--- a/src/app/componentes/dashboard/dashboard.component.scss
+++ b/src/app/componentes/dashboard/dashboard.component.scss
@@ -199,5 +199,27 @@ p {
 }
 
 
+.floating-button {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+}
+
+.floating-timer {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+  background-color: #17a2b8;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 18px;
+}
+
+.timer-info {
+  text-align: center;
+}
 
 
